editor/css/editor-libs/common.css
:root {
  --font-fallback: BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;
  --font-body: Inter, var(--font-fallback);
  --font-code: Consolas, "Courier New", monospace;
  --type-body-l: 400 1rem/1.1876 var(--font-body); /* 16px/19px */
  --type-emphasis-m: 600 0.8125rem/1.23 var(--font-body); /* 13px/16px */
  --font-heading: var(--font-body);
  --type-label-s: 600 0.625rem/1.2 var(--font-heading); /* 10px/12px */
  --type-code-regular: 400 0.875rem/1.5 var(--font-code); /* 14px/21px */

  --elem-radius: 0.25rem;
  --button-height: 2rem;
  --button-radius: var(--elem-radius);
}

:root,
.theme-light {
  /* Everything below here needs to be duplicated in .dark below for themeing */
  --text-primary: #1b1b1b;
  --text-secondary: #4e4e4e;
  --text-inactive: #9e9e9ea6;
  --text-link: #0069c2;
  --text-invert: #fff;
  --background-primary: #fff;
  --background-secondary: #f9f9fb;
  --background-tertiary: #fff;
  --background-toc-active: #ebeaea;
  --background-mark-yellow: rgba(199, 183, 0, 0.4);
  --background-mark-green: rgba(0, 208, 97, 0.4);
  --background-information: rgba(0, 133, 242, 0.1);
  --background-warning: rgba(255, 42, 81, 0.1);
  --background-critical: rgba(211, 0, 56, 0.1);
  --background-success: rgba(0, 121, 54, 0.1);
  --border-primary: #cdcdcd;
  --border-secondary: #cdcdcd;
  --button-primary-default: #1b1b1b;
  --button-primary-hover: #696969;
  --button-primary-active: #9e9e9e;
  --button-primary-inactive: #1b1b1b;
  --button-secondary-default: #fff;
  --button-secondary-hover: #cdcdcd;
  --button-secondary-active: #cdcdcd;
  --button-secondary-inactive: #f9f9fb;
  --button-secondary-border-focus: #0085f2;
  --button-secondary-border-red: #ff97a0;
  --button-secondary-border-red-focus: #ffd9dc;
  --icon-primary: #696969;
  --icon-secondary: #b3b3b3;
  --icon-information: #0085f2;
  --icon-warning: #ff2a51;
  --icon-critical: #d30038;
  --icon-success: #007936;
  --accent-primary: #0085f2;
  --accent-primary-engage: rgba(0, 133, 242, 0.1);
  --accent-secondary: #0085f2;
  --accent-tertiary: rgba(0, 133, 242, 0.1);
  --shadow-01: 0px 1px 2px rgba(43, 42, 51, 0.05);
  --shadow-02: 0px 1px 6px rgba(43, 42, 51, 0.1);
  --focus-01: 0px 0px 0px 3px rgba(0, 144, 237, 0.4);
  --field-focus-border: #0085f2;
  --code-token-tag: #0069c2;
  --code-token-punctuation: #9e9e9e;
  --code-token-attribute-name: #d30038;
  --code-token-attribute-value: #007936;
  --code-token-comment: #757575;
  --code-token-default: #1b1b1b;
  --code-token-selector: #872bff;
  --code-token-class-selector: #1c4482;
  --code-token-pseudo-class: #085;
  --code-token-variable-2: #8c6300;
  --code-token-at-rule: #8c6300;
  --code-token-meta: #555;
  --code-background-inline: #f2f1f1;
  --code-background-block: #f2f1f1;
  --notecard-link-color: #343434;
  --scrollbar-bg: transparent;
  --scrollbar-color: rgba(0, 0, 0, 0.25);
  --category-color: #0085f2;
  --category-color-background: #0085f210;
  --code-color: #5e9eff;
  --mark-color: #dce2f2;
  --plus-accent-color: #d30038;
  --html-accent-color: #d30038;
  --css-accent-color: #0069c2;
  --js-accent-color: #afa100;
  --http-accent-color: #007936;
  --apis-accent-color: #872bff;
  --learn-accent-color: #d00058;
  --plus-code-color: #0069c2;
  --html-code-color: #9e0027;
  --css-code-color: #0069c2;
  --js-code-color: #746a00;
  --http-code-color: #007936;
  --apis-code-color: #872bff;
  --learn-code-color: #d00058;
  --plus-mark-color: #ffd9dc;
  --html-mark-color: #ffd9dc;
  --css-mark-color: #dce2f2;
  --js-mark-color: #f0e498;
  --http-mark-color: #a9f3ba;
  --apis-mark-color: #e6deff;
  --learn-mark-color: #ffd9df;
  --plus-accent-background-color: #ff2a5130;
  --html-accent-background-color: #ff2a5130;
  --css-accent-background-color: #0085f230;
  --js-accent-background-color: #93870030;
  --http-accent-background-color: #009a4630;
  --apis-accent-background-color: #9b65ff30;
  --learn-accent-background-color: #ff1f7230;
  --plus-accent-engage: rgba(255, 42, 81, 0.7);
  --html-accent-engage: rgba(255, 42, 81, 0.7);
  --css-accent-engage: rgba(0, 133, 242, 0.7);
  --js-accent-engage: rgba(147, 135, 0, 0.7);
  --http-accent-engage: rgba(0, 154, 70, 0.7);
  --apis-accent-engage: rgba(155, 101, 255, 0.7);
  --learn-accent-engage: rgba(255, 31, 114, 0.7);
  --homepage-hero-bg: radial-gradient(
    114.42% 123.24% at 6.69% 13.67%,
    rgba(51, 178, 252, 0.2) 22.84%,
    rgba(152, 82, 250, 0.2) 47.63%,
    rgba(255, 230, 0, 0.2) 82.74%
  );
  --homepage-secondary-bg: linear-gradient(
    90deg,
    #8524ff -43.99%,
    #4d7fff 159.52%
  );
  --modal-backdrop-color: rgba(27, 27, 27, 0.1);
  --blend-color: #fff80;
  --text-primary-red: #d30038;
  --text-primary-green: #007936;
  --text-primary-blue: #0069c2;
  --text-primary-yellow: #746a00;
}
/* ... */

